--- a/final_b/css/style.css
+++ b/final_b/css/style.css
@@ -332,7 +332,7 @@ textarea:focus {
   border-radius: 3px;
   margin-top: 1rem;
   min-height: 5rem;
-  min-width: 25rem;
+  width: 25rem;
   color: #fff;
   padding-left: 1rem;
   font-size: 1.3rem;
@@ -658,7 +658,7 @@ textarea:focus {
   border-radius: 3px;
   margin-top: 1rem;
   min-height: 5rem;
-  min-width: 25rem;
+  width: 25rem;
   color: #fff;
   padding-left: 1rem;
   font-size: 1.3rem;
@@ -801,5 +801,54 @@ footer {
   .footer-link {
     right: 8rem;
     margin: 0 auto;
+  }
+}
+@media (max-width: 320px) {
+  .form-input {
+    max-width: 70%;
+  }
+  input {
+    min-width: 95%;
+  }
+  .VRBOX img {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .opportunities-iron img {
+    width: 100%;
+  }
+  .opportunities-car img {
+    width: 100%;
+  }
+  -assasin img {
+    width: 90%;
+  }
+  .how-point {
+    width: 30%;
+    margin-left: 3rem;
+  }
+  .how-point p {
+    font-size: 1.2rem;
+  }
+  .how-point img {
+    width: 70%;
+  }
+  .games-phones {
+    margin: 0 auto;
+  }
+  .games-phones img {
+    width: 100%;
+  }
+  .games-btn {
+    margin: 0 auto;
+  }
+  .feedback-box {
+    margin: 0 auto;
+  }
+  .popup-content {
+    width: 95%;
+  }
+  .popup-select {
+    max-width: 95%;
   }
 }
