--- a/final_b/less/style.less
+++ b/final_b/less/style.less
@@ -405,7 +405,7 @@ button, input, a, textarea {
             border-radius: 3px;
             margin-top: 1rem;
             min-height: 5rem; 
-            min-width: 25rem;
+            width: 25rem;
             color: #fff;
             padding-left: 1rem;
             font-size: 1.3rem;
@@ -723,7 +723,7 @@ button, input, a, textarea {
         border-radius: 3px;
         margin-top: 1rem;
         min-height: 5rem; 
-        min-width: 25rem;
+        width: 25rem;
         color: #fff;
         padding-left: 1rem;
         font-size: 1.3rem;
@@ -925,3 +925,79 @@ footer {
 
     }
 }
+
+
+@media(max-width: 320px) {
+
+    .form-input {
+        max-width: 70%;
+    } 
+
+        input  {
+            min-width: 95%; 
+        }  
+        
+
+  .VRBOX {
+        img {
+            width: 100%;
+            margin: 0 auto;
+        }
+    }
+
+    .opportunities {
+        &-iron {
+            img{
+                width: 100%;
+            }
+        }
+
+        &-car {
+            img {
+                width: 100%;
+            }
+        }
+    }
+
+    &-assasin {
+        img {
+            width: 90%;
+        }
+    }
+
+    .how-point {
+        p {
+            font-size: 1.2rem;
+        }
+        img {
+            width: 70%;
+        }
+        width: 30%;
+        margin-left: 3rem;
+    }
+
+    .games-phones {
+            margin: 0 auto;
+        img {
+            width: 100%;
+        }
+    }
+
+    .games-btn {
+        margin: 0 auto;
+    }
+
+    .feedback-box {
+        margin: 0 auto;
+    }
+
+    .popup-content {
+        width: 95%;
+
+    }
+        .popup-select {
+            max-width: 95%;
+        }
+}
+    
+ 
