--- a/final_b/css/style.css
+++ b/final_b/css/style.css
@@ -803,7 +803,11 @@ footer {
     margin: 0 auto;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 380px) {
+  .adv {
+    font-size: 1.3rem;
+    margin-top: 2rem;
+  }
   .form-input {
     max-width: 70%;
   }
