--- a/final_b/less/style.less
+++ b/final_b/less/style.less
@@ -927,7 +927,12 @@ footer {
 }
 
 
-@media(max-width: 320px) {
+@media(max-width: 380px) {
+
+    .adv {
+        font-size: 1.3rem;
+        margin-top: 2rem;
+    }
 
     .form-input {
         max-width: 70%;
