--- a/Trendo/scss/style.scss
+++ b/Trendo/scss/style.scss
@@ -253,6 +253,7 @@ font-size: 46px;
 }
 .prices-form__button {
 	text-decoration: none;
+	border: none;
 	color: #fff;
 	padding: 11.5px 130px;
 	background-color: var(--accent);
